--- a/.github/workflows/main_mi-app2.yml
+++ b/.github/workflows/main_mi-app2.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
+          name: mi-pagina
           path: .
 
   deploy:
@@ -46,7 +46,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: node-app
+          name: mi-pagina
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -62,4 +62,5 @@ jobs:
           app-name: 'mi-app2'
           slot-name: 'Production'
           package: .
+
           
