--- a/.github/workflows/main_mi-app2.yml
+++ b/.github/workflows/main_mi-app2.yml
@@ -28,6 +28,8 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
+          - name: Run tests
+          run: npm test -- --browsers=ChromeHeadlessCI
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -64,3 +66,4 @@ jobs:
           package: .
 
           
+
