--- a/.github/workflows/main_mi-app2.yml
+++ b/.github/workflows/main_mi-app2.yml
@@ -28,8 +28,8 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-          - name: Run tests
-          run: npm test -- --browsers=ChromeHeadlessCI
+      - name: Run tests in headless Chrome
+        run: npm test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -66,4 +66,5 @@ jobs:
           package: .
 
           
+
 
