--- a/angular.json
+++ b/angular.json
@@ -1,4 +1,10 @@
 {
+  "test": {
+  "builder": "@angular-devkit/build-angular:web-test-runner",
+  "options": {
+    "polyfills": ["zone.js", "zone.js/testing"]
+  }
+}
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
